name:                csv-streams
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yusuke Nomura <yunomu@gmail.com>
maintainer:          Yusuke Nomura <yunomu@gmail.com>
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.IO.Streams.CSV
  -- other-modules:       
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall
  build-depends:       base ==4.*
                     , io-streams
                     , bytestring
                     , attoparsec

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  build-depends:       base ==4.*
                     , hspec
                     , csv-streams
                     , io-streams
                     , bytestring
